[package]
name = "bitfinity-block-confirmation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true
did.workspace = true
evm-canister-client.workspace = true
ethereum-json-rpc-client = { workspace = true, features = ["reqwest"] }
eyre.workspace = true
itertools.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-engine-tree.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-types.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-trie-db.workspace = true
tracing.workspace = true
reth-rpc-eth-types.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
async-trait.workspace = true
candid.workspace = true
reth-db-common.workspace = true
tokio.workspace = true
serde.workspace = true
tempfile.workspace = true
reth-testing-utils.workspace = true
reth-ethereum-engine-primitives.workspace = true
anyhow.workspace = true
jsonrpc-core.workspace = true
serde_json.workspace = true
alloy-network.workspace = true
