[package]
name = "bitfinity-block-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true
did.workspace = true
evm-canister-client.workspace = true
eyre.workspace = true
itertools.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-engine-tree.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-types.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-trie-db.workspace = true
tracing.workspace = true
reth-rpc-eth-types.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
async-trait.workspace = true
candid.workspace = true
ethereum-json-rpc-client = { workspace = true, features = ["reqwest"] }
reth-db-common.workspace = true
tokio.workspace = true
serde.workspace = true
tempfile.workspace = true
